fix styling issues; amend flow type in ppLoaderVisibility.js

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,7 +5,7 @@
 .app-header {
   display: flex;
   position: fixed;
-  z-index: 1;
+  z-index: 10;
   width: 100%;
 }
 
@@ -21,12 +21,7 @@
 
 .app-content {
   margin-top: 64px;
-  padding: 10px 50px;
-  background: #f0f2f5;
-}
-
-.app-loader {
-  height: 100%;
+  padding: 20px 50px 50px;
 }
 
 .ant-spin-container {
@@ -35,4 +30,10 @@
 
 .app-loader.ant-spin-nested-loading > div > .ant-spin {
   max-height: 100%;
+  position: fixed;
+}
+
+.ant-spin-blur {
+  overflow: auto;
+  opacity: .4;
 }
