--- a/src/index.css
+++ b/src/index.css
@@ -7,4 +7,5 @@ body {
 
 #root {
   height: 100%;
+  background: #f0f2f5;
 }
